--- a/index.page.css
+++ b/index.page.css
@@ -25,7 +25,8 @@ input[type=text]
 input[type=number]
 {
   background-color: #FFFF99;
-  width: 305px;;
+  width: 305px;
+  height: 80%;
 }
 
 textarea
