--- a/index.page.css
+++ b/index.page.css
@@ -34,13 +34,15 @@ div#min {
 }
 
 p {
-  font-size: 30px;
+  font-size: 50px;
+  margin-bottom: 0px;
 }
+
 
 textarea
 {
   width: 75%;
-  font-size: 25px;
+  font-size: 30px;
 }
 
 table
