--- a/index.page.css
+++ b/index.page.css
@@ -17,23 +17,27 @@ input
 input#btnFollowStreets {
   background-color: #000;
   background: url(https://s3.us-east-2.amazonaws.com/joe-random/2000px-Solid_white.svg.png) no-repeat right top;
+  width: inherit;
+  border: 2px;
 }
 
 input#btnCurrentLocation {
   background-color: #000;
   background: url(https://s3.us-east-2.amazonaws.com/joe-random/2000px-Solid_white.svg.png) no-repeat right top;
+  width: inherit;
+  border: 2px;
 }
 
 input#btnApplySettings {
   background-color: #FFF;
   background: url(https://s3.us-east-2.amazonaws.com/joe-random/2000px-Solid_white.svg.png) no-repeat right top;
   height: 2.7em;
+  width: inherit;
 }
 
 input[type=button]
 {
   background-color:#CC99FF;
-  margin: .05em;
   font-family: arial;
 }
 
