--- a/index.page.css
+++ b/index.page.css
@@ -16,14 +16,14 @@ input
 
 input[type=button]
 {
-  background-color:#CC99FF;
+  margin: .05em;
 }
 
 input#btnFollowStreets {
   background-color: #000;
   background: url(https://s3.us-east-2.amazonaws.com/joe-random/2000px-Solid_white.svg.png) no-repeat right top;
   border-style: solid 6px;
-  margin-bottom: 25px;
+  margin-bottom: .3em;
 }
 
 input#btnCurrentLocation {
@@ -67,12 +67,12 @@ p {
   margin-bottom: 0;
 }
 
-textarea
+/* textarea
 {
   width: 75%;
   font-size: 0.2em;
 }
-
+ */
 table
 {
   width: 100%;
