--- a/index.page.css
+++ b/index.page.css
@@ -22,21 +22,21 @@ input[type=button]
 input#btnFollowStreets {
   background-color: #000;
   background: url(https://s3.us-east-2.amazonaws.com/joe-random/2000px-Solid_white.svg.png) no-repeat right top;
-  border-style: solid 6px;
+  border-style: solid;
   margin-bottom: .3em;
 }
 
 input#btnCurrentLocation {
   background-color: #000;
   background: url(https://s3.us-east-2.amazonaws.com/joe-random/2000px-Solid_white.svg.png) no-repeat right top;
-  border-style: solid 6px;
+  border-style: solid;
 }
 
 input#btnApplySettings {
   background-color: #FFF;
   background: url(https://s3.us-east-2.amazonaws.com/joe-random/2000px-Solid_white.svg.png) no-repeat right top;
   height: 2.7em;
-  border-style: solid 6px;
+  border-style: solid;
 }
 
 input[type=text]
@@ -67,12 +67,6 @@ p {
   margin-bottom: 0;
 }
 
-/* textarea
-{
-  width: 75%;
-  font-size: 0.2em;
-}
- */
 table
 {
   width: 100%;
