--- a/index.page.css
+++ b/index.page.css
@@ -38,6 +38,14 @@ input#btnApplySettings {
   border-style: solid;
 }
 
+input#btnResetUsername {
+  background-color: #FFF;
+  background: url(https://s3.us-east-2.amazonaws.com/joe-random/2000px-Solid_white.svg.png) no-repeat right top;
+  height: 2.7em;
+  width: 10%;
+  border-style: solid;
+}
+
 input[type=text]
 {
   background-color: #FFFF99;
