--- a/index.page.css
+++ b/index.page.css
@@ -34,7 +34,8 @@ input#btnCurrentLocation {
 input#btnApplySettings {
   background-color: #FFF;
   background: url(https://s3.us-east-2.amazonaws.com/joe-random/2000px-Solid_white.svg.png) no-repeat right top;
-  height: 2.7em;
+  height: 2em;
+  width: 11em;
   border-style: solid;
 }
 
